--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color:#dddddd;
   font-family: sans-serif;
 }
 
@@ -17,6 +18,7 @@ body {
   padding-left: 7px;
   padding-right: 7px;
   border-radius: 5px;
+  background-color: #FFFFFF;
   cursor: pointer;
 }
 
@@ -33,4 +35,8 @@ body {
   width: 200px;
   overflow: hidden;
   float: left;
+}
+
+img{
+  border: 1px solid #bbbbbb;
 }
